--- a/package.json
+++ b/package.json
@@ -11,9 +11,16 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsx-view-engine": "^0.1.0",
+    "mongodb": "^5.4.0",
+    "mongoose": "^6.11.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "styled-components": "^5.3.10"
+  },
+  "resolutions": {
+    "styled-components": "^5"
   }
 }
